# nic-ciekawego

./: .env.example  .gitignore  config.example.yaml  config.yaml  cspell.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: news-daily.yml
ocaml/: .gitignore  README.md  dune-project  news_summarizer.opam
ocaml/src/: app.ml  article.ml  config.ml  dune  format_email.ml  main.ml  rss_fetch.ml  send_email.ml  summarize.ml  translate.ml
src/: main.py
utils/: article.py  build_corpus.py  extract_content.py  fetch_rss.py  format_email.py  llm_summarize.py  send_email.py  translate.py
